完善 RESTFul 服务